force-app/main/default/objects/Feedback_Template__c/Feedback_Template__c.object-meta.xml
<CustomObject>
    <description>Configurable templates for different interview types and feedback collection</description>
    <label>Feedback Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>