force-app/main/default/objects/Feedback_Template__c/fields/Competency_Areas__c.field-meta.xml
<CustomField>
    <fullName>Competency_Areas__c</fullName>
    <description>Competency areas to evaluate in this interview type</description>
    <label>Competency Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Skills</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Problem Solving</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Cultural Fit</fullName>
            </value>
            <value>
                <fullName>Teamwork</fullName>
            </value>
            <value>
                <fullName>Adaptability</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Customer Focus</fullName>
            </value>
            <value>
                <fullName>Decision Making</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>