force-app/main/default/objects/Feedback_Template__c/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <description>Role of the user who created this template</description>
    <label>Created By Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Seeker</fullName>
                <default>true</default>
                <label>Job Seeker</label>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>