force-app/main/default/objects/Feedback_Template__c/fields/Form_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Form_Configuration__c</fullName>
    <label>Form Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>