force-app/main/default/objects/Feedback_Template__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <description>Type of interview this template is designed for</description>
    <label>Interview Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Screen</fullName>
            </value>
            <value>
                <fullName>Technical Interview</fullName>
            </value>
            <value>
                <fullName>Behavioral Interview</fullName>
            </value>
            <value>
                <fullName>Leadership Interview</fullName>
            </value>
            <value>
                <fullName>Panel Interview</fullName>
            </value>
            <value>
                <fullName>Final Interview</fullName>
            </value>
            <value>
                <fullName>Cultural Fit</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>