force-app/main/default/objects/Feedback_Template__c/fields/Rating_Scale__c.field-meta.xml
<CustomField>
    <fullName>Rating_Scale__c</fullName>
    <description>Rating scale type for this template</description>
    <label>Rating Scale</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-5 Scale</fullName>
                <default>true</default>
                <label>1-5 Scale</label>
            </value>
            <value>
                <fullName>1-10 Scale</fullName>
            </value>
            <value>
                <fullName>Pass/Fail</fullName>
            </value>
            <value>
                <fullName>Excellent/Good/Fair/Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>