force-app/main/default/objects/Feedback_Template__c/fields/Template_Description__c.field-meta.xml
<CustomField>
    <fullName>Template_Description__c</fullName>
    <label>Template Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>