force-app/main/default/objects/Feedback_Template__c/fields/Template_JSON__c.field-meta.xml
<CustomField>
    <fullName>Template_JSON__c</fullName>
    <description>JSON configuration for dynamic form generation</description>
    <label>Template JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>