force-app/main/default/objects/Feedback_Template__c/fields/Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>Usage_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Track how many times this template has been used</description>
    <label>Usage Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>